---
source: src/config.rs
expression: file
info: services/ccp-teiler.yml
input_file: tests/configs/example.config.toml
---

services:
  ccp-teiler-orchestrator:
    image: docker.verbis.dkfz.de/cache/samply/teiler-orchestrator:latest
    labels:
      - "traefik.enable=true"
      - "traefik.http.routers.ccp-teiler_orchestrator.rule=PathPrefix(`/ccp-teiler`)"
      - "traefik.http.services.ccp-teiler_orchestrator.loadbalancer.server.port=9000"
      - "traefik.http.routers.ccp-teiler_orchestrator.tls=true"
      - "traefik.http.middlewares.ccp-teiler_orchestrator_strip.stripprefix.prefixes=/ccp-teiler"
      - "traefik.http.routers.ccp-teiler_orchestrator.middlewares=ccp-teiler_orchestrator_strip"
    environment:
      TEILER_BACKEND_URL: "/ccp-teiler-backend"
      TEILER_DASHBOARD_URL: "/ccp-teiler-dashboard"
      DEFAULT_LANGUAGE: "de"
      HTTP_RELATIVE_PATH: "/ccp-teiler"

  ccp-teiler-dashboard:
    image: docker.verbis.dkfz.de/cache/samply/teiler-dashboard:latest
    labels:
      - "traefik.enable=true"
      - "traefik.http.routers.ccp-teiler_dashboard.rule=PathPrefix(`/ccp-teiler-dashboard`)"
      - "traefik.http.services.ccp-teiler_dashboard.loadbalancer.server.port=80"
      - "traefik.http.routers.ccp-teiler_dashboard.tls=true"
      - "traefik.http.middlewares.ccp-teiler_dashboard_strip.stripprefix.prefixes=/ccp-teiler-dashboard"
      - "traefik.http.routers.ccp-teiler_dashboard.middlewares=ccp-teiler_dashboard_strip"
    environment:
      DEFAULT_LANGUAGE: "DE"
      TEILER_BACKEND_URL: "/ccp-teiler-backend"
      TEILER_DASHBOARD_URL: "/ccp-teiler-dashboard"
      OIDC_URL: "https://sso.verbis.dkfz.de/application/o/dummy-public/"
      OIDC_CLIENT_ID: "dummy-public"
      OIDC_TOKEN_GROUP: "groups"
      TEILER_ADMIN_NAME: ""
      TEILER_ADMIN_EMAIL: ""
      TEILER_ADMIN_PHONE: ""
      TEILER_PROJECT: "ccp"
      EXPORTER_API_KEY: "${CCP_EXPORTER_API_KEY}"
      TEILER_ORCHESTRATOR_URL: "/ccp-teiler"
      TEILER_ORCHESTRATOR_HTTP_RELATIVE_PATH: "/ccp-teiler"
      TEILER_USER: "DKTK_CCP_Dummy"
      TEILER_ADMIN: "DKTK_CCP_Dummy_Verwalter"
      REPORTER_DEFAULT_TEMPLATE_ID: "ccp-qb"
      EXPORTER_DEFAULT_TEMPLATE_ID: "ccp"


  ccp-teiler-backend:
    image: docker.verbis.dkfz.de/ccp/dktk-teiler-backend:latest
    labels:
      - "traefik.enable=true"
      - "traefik.http.routers.ccp-teiler_backend.rule=PathPrefix(`/ccp-teiler-backend`)"
      - "traefik.http.services.ccp-teiler_backend.loadbalancer.server.port=8085"
      - "traefik.http.routers.ccp-teiler_backend.tls=true"
      - "traefik.http.middlewares.ccp-teiler_backend_strip.stripprefix.prefixes=/ccp-teiler-backend"
      - "traefik.http.routers.ccp-teiler_backend.middlewares=ccp-teiler_backend_strip"
    environment:
      LOG_LEVEL: "INFO"
      APPLICATION_PORT: "8085"
      DEFAULT_LANGUAGE: "DE"
      TEILER_ORCHESTRATOR_HTTP_RELATIVE_PATH: "/ccp-teiler"
      TEILER_ORCHESTRATOR_URL: "/ccp-teiler"
      TEILER_DASHBOARD_DE_URL: "/ccp-teiler-dashboard/de"
      TEILER_DASHBOARD_EN_URL: "/ccp-teiler-dashboard/en"
      HTTP_PROXY: http://forward-proxy:3128/
      EXPORTER_CHECK_URL: "http://ccp-exporter:8092/info"
      ENABLE_MTBA: false
      ENABLE_DATASHIELD: false
      IDMANAGER_UPLOAD_APIKEY: "" # Used for health checks
